[gd_scene load_steps=2 format=3 uid="uid://todqitbbpsq2"]

[ext_resource type="Script" path="res://Scenes/online_ui/chat.gd" id="1_nhbh7"]

[node name="Chat" type="Control"]
texture_filter = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nhbh7")

[node name="ChatContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 250.0

[node name="TabContainer" type="TabContainer" parent="ChatContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Global" type="RichTextLabel" parent="ChatContainer/TabContainer"]
layout_mode = 2
bbcode_enabled = true
scroll_following = true

[node name="Guild" type="RichTextLabel" parent="ChatContainer/TabContainer"]
visible = false
layout_mode = 2
bbcode_enabled = true
scroll_following = true

[node name="Squad" type="RichTextLabel" parent="ChatContainer/TabContainer"]
visible = false
layout_mode = 2
bbcode_enabled = true
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="ChatContainer"]
layout_mode = 2

[node name="ChatInput" type="LineEdit" parent="ChatContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SendButton" type="Button" parent="ChatContainer/HBoxContainer"]
layout_mode = 2
text = "Send"

[connection signal="active_tab_rearranged" from="ChatContainer/TabContainer" to="." method="_on_tab_container_active_tab_rearranged"]
[connection signal="text_submitted" from="ChatContainer/HBoxContainer/ChatInput" to="." method="_on_chat_input_text_submitted"]
[connection signal="pressed" from="ChatContainer/HBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
